# FunFams

./: .gitignore  README.md  pyproject.toml
configs/: train.yaml
configs/experiment/: proxy_anchor.yaml  supcon.yaml
results/: All_FunFam_Figures.ipynb  README.md
scripts/: HUPs_split.py  baseline_knn.py  baseline_knn.qsub  calculate_ec_purity.py  calculate_ec_purity_and_completeness.py  calculate_ec_purity_and_split_proportion.py  calculate_ec_purity_v2.py  compare_lmdbs.py  count_funfam_sizes.py  create_s30_split.py  create_s30_split.qsub  data_preprocessing.awk  datasplit.py  embed-david.py  embed-esm2.py  embed-lmdb.py  embed.py  embed_3.20.20.70_prostt5.qsub  embed_3.20.20.70_seqs_prostt5.qsub  embed_3.40.50.970_prostt5.qsub  embed_HUPs_starting_cluster_seqs.qsub  embed_funfams_esm2_bubba.qsub  embed_lmdb_single-GPU.py  embed_prostt5.py  extract_embeddings.py  extract_fastas.sh  extract_raw_esm2.py  extract_raw_prostt5.py  find_missing_seqs.py  generate_cluster_tsv.py  generate_cluster_tsv.sh  hdbscan_benchmark.py  hdbscan_benchmark_allseqs.py  lmdb_to_pt.py  make_cluster_tsv.py  mapping_to_fasta.py  mask_residues.py  seq_sim_split.py  split_hits_by_max_hit_pct.py  train.qsub  (+3 more)
scripts/hpc/: embed_3.20.20.70_esm2.qsub  embed_3.20.20.70_seqs_esm2.qsub  embed_funfams_bubba.qsub  extract_embeddings.qsub  extract_raw_prostt5.qsub  train_prostt5.qsub
src/: __init__.py  callbacks.py  data.py  faiss_utils.py  losses.py  model.py  train.py  utils.py
