[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# Note: dev dependencies are defined in [project.optional-dependencies]

[project]
name = "funfam-training"
version = "0.1.0"
description = "Contrastive learning for FunFam protein classification"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Janusan Jeyananthan"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "lightning>=2.0.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "numpy>=1.21,<2",
    "scikit-learn>=1.3.0",
    "lmdb>=1.4.0",
    "tqdm>=4.62.0",
    "wandb==0.17.9",
    "click>=8.0.0",
    "biopython>=1.80",
]

[project.optional-dependencies]
faiss = ["faiss-cpu==1.9.0"]
embeddings = ["transformers>=4.30.0"]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
py-modules = ["data", "model", "losses", "callbacks", "utils", "faiss_utils", "train"]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
